Preparing for public release
This reverts commit 788e4ec436ee8a50a17dad6c4ae087c42241aa36.

Conflicts:

	.gitignore
	app.yml
	main.xib
	version.yml

--- a/app.yml
+++ b/app.yml
@@ -1,5 +1,5 @@
-name: Deuteranopia
-bundle_id: com.mutant-atomic.Deuteranopia
+name: Hamlet
+bundle_id: com.mutant-atomic.Hamlet
 ruby_files:
     - main.rb
     - book.rb
@@ -17,3 +17,4 @@ resources:
     - play.png
     - pause.png
     - view.plist
+    - Hamlet.txt
